# pydantic_aiohttp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml
pydantic_aiohttp/: __init__.py  client.py  encoders.py  errors.py  responses.py  status.py  types.py  utils.py
