[tool.poetry]
name = "pydantic_aiohttp"
version = "0.1.0"
description = ""
authors = ["pylakey <pylakey@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pylakey/pydantic_aiohttp"
repository = "https://github.com/pylakey/pydantic_aiohttp"
packages = [
    { include = "pydantic_aiohttp" },
]
include = [
    "README.md",
    "CHANGELOG.md",
]
classifiers = [
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^0.8.0"
aiohttp = { extras = ["speedups"], version = "^3.8.1" }
pydantic = "^1.9.0"
ujson = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
